# human-like-ai

./: pyproject.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/human_like_ai/: __init__.py  main.py
src/human_like_ai/config/: __init__.py  character.py  settings.py
src/human_like_ai/core/: __init__.py  agent.py  conversation.py  memory.py  rag.py
src/human_like_ai/data/: character_sheet.yaml
src/human_like_ai/emotion/: __init__.py  extractor.py  manager.py  models.py
src/human_like_ai/utils/: __init__.py  llm.py  logging.py
tests/: conftest.py
tests/data/: test_character_sheet.yaml
tests/unit/config/: test_character.py  test_settings.py
tests/unit/emotion/: test_extractor.py  test_manager.py  test_models.py
